++ activate neon effect

--- a/clashofplanets/game/templates/gameroom.html
+++ b/clashofplanets/game/templates/gameroom.html
@@ -9,7 +9,7 @@
     <div class="row text-center">
         <div class="col">
             <h1>
-            Game Name: <span>{{game.game_name}}</span> | ID: <span id="gamenum">{{game.id}}</span>
+                Game Name: <span class="neon-effect">{{game.game_name}}</span> | ID: <span class="neon-effect" id="gamenum">{{game.id}}</span>
             </h1>
         </div>
     </div>
