fix de frontend en templates

--- a/clashofplanets/game/templates/ingame.html
+++ b/clashofplanets/game/templates/ingame.html
@@ -14,7 +14,7 @@
         </div>
     </div>
     <div class="row top30">
-        <div class="col table-responsive">
+        <div class="col col-game table-responsive">
             <table class="table metal-effect2">
                 <thead>
                     <tr>
@@ -122,12 +122,15 @@
             <hr class="style1">
             </form>
         </div>
-
-        <div class="col-md-5 offset-md-1 metal-effect2">
+        <div class="col-md-1">
+        </div>
+        <div class="col-md-5 metal-effect2">
             <h2 class="custom-h2">Battle Log</h2>
             <hr class="style1">
-            <div id="console-log" style="overflow: auto; height: 260px; background-color: #000;"></div>
+            <div id="console-log"></div>
         </div>
+
+
     </div>
 
     <div class="row text-center top30">
