--- a/clashofplanets/game/static/css/game.css
+++ b/clashofplanets/game/static/css/game.css
@@ -27,10 +27,21 @@ hr.style1{
     margin: auto;
 }
 
+.col-game {
+    padding-left: 0px;
+    padding-right: 0px;
+}
+
 .help-text {
     color: white;
     max-width: 80%;
     margin: auto;
+}
+
+#console-log {
+    max-height: 250px;
+    background-color: #000;
+    overflow: auto;
 }
 
 .navbar-nav > li{
@@ -450,6 +461,14 @@ input[type=range]::-moz-range-progress {
 .top15 { margin-top:15px; }
 .top17 { margin-top:17px; }
 .top30 { margin-top:30px; }
+
+.bot5 { margin-bottom::5px; }
+.bot7 { margin-bottom:7px; }
+.bot10 { margin-bottom:10px; }
+.bot15 { margin-bottom:15px; }
+.bot17 { margin-bottom:17px; }
+.bot30 { margin-bottom:30px; }
+
 
 .metal-effect {
 	box-shadow:0 12px 20px rgba(0,0,0,.9);
